  Optimizations:
    - Now marks incalculable items and unmarks them once the blocking item is calculated
  Changes:
    - Left-most items are no longer reliably simpler than right-most items
  Bugfixes:
    - Fixed overriden base items not appearing in the tierlist
    - Fixed ignored recipes not being ignored
---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 2024-05-20
  Major Features:
    - Now has a UI to display the tiers!
  Features:
    - Add setting to decrement a technology tier. Meaning green science items can share a row with green science
  Changes:
    - Refactored the monolithic data-final-fixes.lua into multiple files
    - Changed from a startup script to runtime
    - Add MIT License I forgor to
  Bugfixes:
    - Fixed a handful of bugs that I spotted while refactoring to runtime. Theoretically added just as many bugs though.
    - Caught a possible invalid science pack not resulting in an invalid technology
---------------------------------------------------------------------------------------------------
Version: 0.1.3
Date: 2024-05-18
  Features:
    - Burnable fuels now kind of work. Not all machines that can burn are currently being grabbed. To be refined
    - Rocket launch products now work. This means you can calculate space-science-pack instead of cobbling together its ingredients
  Bugfixes:
    - Now will no longer crash on recipes with no results
    - A category with no machines is now handled properly instead of relying on the safety net of pcall
    - A category with no valid machines now signals as invalid instead of leaking an infinity
  Changes:
    - Will only log when given an invalid type in startup settings, rather than halting it with an error
---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: 2024-05-18
  Bugfixes: